source/gameengine/Rasterizer/RAS_2DFilterManager.cpp
@@ -435,6 +435,9 @@ void RAS_2DFilterManager::RenderFilters(RAS_ICanvas* canvas)
 	glPolygonMode(GL_FRONT_AND_BACK, GL_FILL);
 	// if the last rendered face had alpha add it would messes with the color of the plane we apply 2DFilter to
 	glDisable(GL_BLEND); 
+	// fix for [#34523] alpha buffer is now available for all OSs
+	glDisable(GL_ALPHA_TEST);
+
 	glPushMatrix();		//GL_MODELVIEW
 	glLoadIdentity();	// GL_MODELVIEW
 	glMatrixMode(GL_TEXTURE);
